--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         </section>
 <section id="About">
-    <h1>About Us</h1>
+    <h1 class="h11">About Us</h1>
     <div class="about-container">
         <div class="about-image">
             <img src="mypic1.jpeg">
